Fix height and alignment

--- a/www/style.css
+++ b/www/style.css
@@ -3,7 +3,6 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,6 +15,7 @@ body {
 #wrapper {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 #canvasWrapper{
